# cli

./: .breakpoints  .gitignore  README.md  TODO.md  cli.py  commands.yml  example.py  help.json  run.py
.github/workflows/: create-dist.yml  create-release.yml
click/click-test/: README.md  pyproject.toml
click/click-test/src/click_test/: __init__.py
click/click-test/src/click_test/scripts/: test.py
custom/: changes.yml  cli.py
custom/src/: cli.py  help.json
src/: __init__.py  cli.py  funcs.py  main.py  test_funcs.py
