[project]
name = "click-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nathan3-14", email = "nathan.watson.172@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/click_test"]

[project.scripts]
test = "click_test.scripts.test:testcommand"
